# personal_analytics

./: README.md  main.py  pyproject.toml
.streamlit/: pages.toml
gitlab-users/: main.py
ruble_analysis/: main.py
ruble_analysis/data/: ch.xlsx  euro.xlsx  us.xlsx
test/: main.py
