[tool.poetry]
name = "personal-analytics"
version = "0.1.0"
description = ""
authors = ["Ilya Ponomarev <Ilya.Ponomarev@mvideo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
pandas = "^2.2.1"
streamlit = "^1.31.1"
matplotlib = "^3.8.3"
openpyxl = "^3.1.2"
numpy = "^1.26.4"
st-pages = "^0.4.5"
python-gitlab = "^4.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
watchdog = "^4.0.0"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
